# OOP_2021

./: .gitignore  CMakeLists.txt
EN/ex1/: complex.c  students.c  vector.c
EN/ex10/: cards.cpp  discounts.cpp  intro.cpp
EN/ex11/: 1.cpp  complex_numbers.cpp
EN/ex2/: people.cpp  refExample.cpp
EN/ex3/: employees.cpp  intro.ccp.cpp
EN/ex4/: company.cpp  lovedate.cpp  students.cpp
EN/ex5/: arrays.cpp  example1.cpp  example2.cpp  example3.cpp  webservers.cpp
EN/ex6/: arrays.cpp  complex_numbers.cpp  students.cpp  webservers.cpp
EN/ex7/: bank.cpp  intro.cpp  tennis.cpp
EN/ex8/: hotels.cpp  intro.cpp  publications.cpp  shapes.cpp
EN/ex9/: adapter.cpp  diamond.cpp  product.cpp
EN/midterm_problems/: drivers.c  pairs.cpp
EN/midterms2_problems/: task1.cpp  task2.cpp
MK/aud1/: datum.c  students.c
MK/aud10/: intro.cpp  karticki.cpp  products2.cpp
MK/aud2/: vraboteni.cpp
MK/aud3/: email.cpp  triagolnik.cpp  voved.cpp
MK/aud4/: ekipa.cpp  sredba.cpp  vraboten.cpp
MK/aud5/: array.cpp  intro.cpp  primer1.cpp  primer2.cpp  primer3.cpp  webserveri.cpp
MK/aud6/: array.cpp  complex.cpp  ucenici.cpp  webserveri.cpp
MK/aud7/: account.cpp  intro.cpp  tenis.cpp
MK/aud9/: adapter.cpp  diamond.cpp  products..cpp
MK/kolokviumski/: README.md  repo.cpp  struktura.c
MK/kolokviumski2/: invoices.cpp  lunapark.cpp
aud1/: complex.c  vector.c
aud2/: drzavi.cpp  start.cpp
aud3/: email.cpp  triagolnik.cpp  vraboteni.cpp
ex1/: countries.c  date.c
ex2/: people.cpp  skilift.c
ex3/: emails.cpp  traingles.cpp
